Modification de la BD
Ajout des tables: EQUIPE, PAYS et modifications des tables ATHLETE et EPREUVE