@@ -1,16 +1,16 @@
-package bd;
+
 public class ExecutableBD {
     public static void main(String[] args) {
         try {
             // Create a new instance of ConnexionMySQL
             ConnexionMySQL connexion = new ConnexionMySQL();
             // Connect to the database with appropriate parameters
-            connexion.connecter("servinfo-maria", "DBbindaivin", "bindaivin", "bindaivin");
+            connexion.connecter("servinfo-maria", "DBguihard", "guihard", "guihard");
             // Check if connection is successful before proceeding
             if (connexion.isConnecte()) {
                 // If connected, create an instance of BD and execute csvToSQL method
                 BD bd = new BD(connexion);
-                bd.csvToSQL("donnees.csv");
+                bd.csvToSQL("../donnees.csv");
             } else {
                 System.err.println("Erreur: Connection not established.");
             }
@@ -20,5 +20,6 @@ public class ExecutableBD {
         }
     }
 }
-//Pour exécuter :
-//java -cp ../bin:/usr/share/java/mariadb-java-client.jar ExecutableBD
+//Compiler et exécuter :
+//javac --source-path ./src -d ./bin --module-path /usr/share/openjfx/lib/ --add-modules javafx.controls src/*.java
+//java -cp ./bin:/usr/share/java/mariadb-java-client.jar --module-path /usr/share/openjfx/lib/ --add-modules javafx.controls ExecutableBD
